--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,16 +1,13 @@
 FROM python:3.10
 
-WORKDIR /code
-
-COPY requirements.txt .
+ENV APP_HOME /app
+WORKDIR $APP_HOME
+COPY . ./
 
 RUN apt-get update && \
-    apt-get install -y gcc musl-dev && \
-    pip install --no-cache-dir -r requirements.txt && \
-    apt-get remove -y gcc musl-dev && \
-    apt-get autoremove -y && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y libpq-dev gcc && \
+    pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD [ "python", "./app.py" ]
+CMD exec gunicorn --bind :$PORT --workers 1 --threads 1 --timeout 0 app:app
