--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,13 +1,11 @@
 FROM python:3.10
 
-ENV APP_HOME /app
-WORKDIR $APP_HOME
-COPY . ./
+COPY . /app
+WORKDIR /app
 
 RUN apt-get update && \
     apt-get install -y libpq-dev gcc && \
     pip install --no-cache-dir -r requirements.txt
 
-COPY . .
-
-CMD exec gunicorn --bind :$PORT --workers 1 --threads 1 --timeout 0 app:app
+ENTRYPOINT ["python"]
+CMD ["app.py"]
